feature: added Alpine bindings.
In `uiloos/core` added the `Observable` type which all components
implemented. It  also  exposes the `Subscriber` type now. This was
needed for the `subscribe` in the `uiloos/alpine` package.

Also in core in `minification-check.js` changed the `load` function so
it longer refers to the `licenseFile`, as it does not represent the
`licenseFile` alone. It actually represents the contents of the given
file to load, so renamed it to `contents` instead.

Website changes:

  1. Revamped the installation page, added more CDN examples, and now
     informing about bindings better.

  2. Revamped the activation page it no longer has its own template,
     because the FAQ is rendered in line now with the main content,
     instead of getting its own section.

     This moves the FAQ closer to the rest of the text, before it was
     not very visible that it was there at all.

  3. Added 1.4.0 release notes for every package.

  4. Changed title of home page from "uiloos | uiloos" to
     "home | uiloos"

  5. Added `packages.js` which contains a `const` that defines all
     packages. Before both `generate-search-data` and `distil-api`
     defined the exact same array of packages.

     So now there is only one place to change if a new binding is added.

  6. In `eleventy.config.js` we now sort api pages slightly differently:
     functions are now placed at the top.

  7. `distil-api` has been reworked to support alpine, and support
      documenting interfaces.

  8. Now supporting multiple code blocks in an @example in the api docs.

  9. Fixed 'In general" links on the "usage in frameworks pages" it
     linked to 'react' and not to 'in-general'.

  10. Examples no use "_include" templates.

Added missing minification file

wip

--- a/packages/website/src/_includes/components/apinav.njk
+++ b/packages/website/src/_includes/components/apinav.njk
@@ -48,6 +48,14 @@
           </div>
         </a>
       </li>
+
+      <li class="py-2">
+        <a class="flex items-center hover:underline" href="/api/alpine/">
+          <div class="flex items-center grow">
+            <span>Alpine</span>
+          </div>
+        </a>
+      </li>
     </ul>
   </nav>
 </aside>
