--- a/packages/website/src/pages/api/_includes/displayApi.njk
+++ b/packages/website/src/pages/api/_includes/displayApi.njk
@@ -28,6 +28,8 @@
         <span class="bg-green-400 font-bold text-white inline-block px-1 my-2 text-sm">F</span>
       {% elif def.kindString === 'instance' %}
         <span class="bg-green-400 font-bold text-white inline-block px-1 my-2 text-sm">I</span>
+      {% elif def.kindString === 'interface' %}
+        <span class="bg-pink-400 font-bold text-white inline-block px-1 my-2 text-sm">I</span>
       {% else %}
         <span class="bg-orange-400 font-bold text-white inline-block px-1 my-2 text-sm">T</span>
       {% endif %}
