--- a/packages/website/src/pages/api/api.njk
+++ b/packages/website/src/pages/api/api.njk
@@ -47,9 +47,14 @@ keywords: "uiloos API, uiloos api"
       <span class="text-2xl font-bold leading-snug tracking-tight mb-1">Svelte</span>
     </a>
 
+    <a href="/api/alpine" class="w-72 shrink-0 relative flex flex-col items-center p-6 bg-white dark:bg-gray-800 rounded shadow-xl">
+      <img src="/images/frameworks/alpine.svg" class="w-16 h-16 p-1 -mt-1 mb-2" loading="lazy" alt="JavaScript unofficial logo" />
+      <span class="text-2xl font-bold leading-snug tracking-tight mb-1">Alpine</span>
+    </a> 
+
     <a href="/api/angular" class="w-72 shrink-0 relative flex flex-col items-center p-6 bg-white dark:bg-gray-800 rounded shadow-xl">
       <img src="/images/frameworks/angular.svg" class="w-16 h-16 p-1 -mt-1 mb-2" loading="lazy" alt="JavaScript unofficial logo" />
       <span class="text-2xl font-bold leading-snug tracking-tight mb-1">Angular</span>
-    </a>  
+    </a> 
   </div>
 </article>
