--- a/packages/website/src/pages/docs/getting-started/overview.njk
+++ b/packages/website/src/pages/docs/getting-started/overview.njk
@@ -9,7 +9,7 @@ keywords: "uiloos overview, uiloos reason for existing, uiloos philosophy, what 
 ---
 
 <article>
- <h1>Overview</h1>
+  <h1>Overview</h1>
 
   <nav class="2xl:fixed 2xl:top-24 2xl:right-2 2xl:w-[270px]" role="doc-toc">
     <em>Table of contents</em>
@@ -153,7 +153,7 @@ keywords: "uiloos overview, uiloos reason for existing, uiloos philosophy, what 
     occurs you might add an <span class="high">.active</span> CSS
     class, to the element which became active.
   </p>
-  
+
   <h3>4.2 With a reactive framework</h3>
 
   <p>
@@ -171,12 +171,12 @@ keywords: "uiloos overview, uiloos reason for existing, uiloos philosophy, what 
   </p>
 
   <p>
-    uiloos does however provide bindings for React, Vue and Angular.
+    uiloos does however provide bindings for React, Vue, Svelte, Alpine, and Angular.
     With these bindings using uiloos with a framework becomes easier.
     For example the React bindings provides various hooks, and the vue bindings
     provides various composables. 
   </p>
-  
+
   <a 
     class="card" 
     href="/docs/getting-started/installation/"
