--- a/packages/website/src/pages/home/home.njk
+++ b/packages/website/src/pages/home/home.njk
@@ -1,5 +1,5 @@
 ---
-title: uiloos
+title: home
 layout: layouts/base.njk
 permalink: /
 description: "uiloos is a headless library for JavaScript and TypeScript, which provides common behaviors seen in most websites and web-applications."
@@ -515,7 +515,19 @@ keywords: "uiloos, headless ui, component library, common web behaviors, javascr
     <div class="w-72 shrink-0 relative flex flex-col items-center p-6 bg-white dark:bg-gray-800 rounded shadow-xl">
       <img src="/images/frameworks/svelte.svg" class="w-16 h-16 p-1 -mt-1 mb-2" loading="lazy" alt="JavaScript unofficial logo" />
       <h3 class="font-bold leading-snug tracking-tight mb-1">Svelte</h3>
-      <p class="text-gray-800 dark:text-white text-center">Use predefined Svelte store</p>
+      <p class="text-gray-800 dark:text-white text-center">Use predefined Svelte stores.</p>
+    </div>
+
+    <div class="w-72 shrink-0 relative flex flex-col items-center p-6 bg-white dark:bg-gray-800 rounded shadow-xl">
+      <img src="/images/frameworks/alpine.svg" class="w-16 h-16 p-1 -mt-1 mb-2" loading="lazy" alt="JavaScript unofficial logo" />
+      <h3 class="font-bold leading-snug tracking-tight mb-1">Alpine</h3>
+      <p class="text-gray-800 dark:text-white text-center">Marry uiloos and alpine with "data" and "store" bindings.</p>
+    </div>
+
+    <div class="w-72 shrink-0 relative flex flex-col items-center p-6 bg-white dark:bg-gray-800 rounded shadow-xl">
+      <img src="/images/frameworks/angular.svg" class="w-16 h-16 p-1 -mt-1 mb-2" loading="lazy" alt="JavaScript unofficial logo" />
+      <h3 class="font-bold leading-snug tracking-tight mb-1">Angular</h3>
+      <p class="text-gray-800 dark:text-white text-center">Simply works out of the box.</p>
     </div>
 
     <div class="w-72 shrink-0 relative flex flex-col items-center p-6 bg-white dark:bg-gray-800 rounded shadow-xl">
@@ -584,7 +596,7 @@ keywords: "uiloos, headless ui, component library, common web behaviors, javascr
 </section>
 
 {# CTA #}
-<section class="max-w-6xl mx-auto px-4 sm:px-6 mb-16 bg-purple-600 rounded py-10 px-8 md:py-16 md:px-12 shadow-2xl">
+<section class="max-w-6xl mx-auto sm:px-6 mb-16 bg-purple-600 rounded py-10 px-8 md:py-16 md:px-12 shadow-2xl">
   
   <!-- CTA box -->
   <div class="flex flex-col lg:flex-row justify-between items-center">
