--- a/packages/website/src/pages/releases/releases.njk
+++ b/packages/website/src/pages/releases/releases.njk
@@ -124,5 +124,26 @@ keywords: "uiloos releases, uiloos releases hub"
         </svg>
       </a>
     </li>
+
+    <li>
+      <a
+        class="card"
+        href="/releases/alpine/"
+      >
+        <div>
+          <div class="text-normal font-medium mb-1">@uiloos/alpine</div>
+          <div class="text-sm">The Alpine bindings for uiloos.</div>
+        </div>
+        <svg
+          class="w-4 h-4 fill-current text-blue-600 shrink-0 ml-6"
+          viewBox="0 0 16 16"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            d="M9.3 14.7l-1.4-1.4L12.2 9H0V7h12.2L7.9 2.7l1.4-1.4L16 8z"
+          ></path>
+        </svg>
+      </a>
+    </li>
   </ol>
 </section>
