--- a/packages/website/src/pages/docs/active-list/frameworks.njk
+++ b/packages/website/src/pages/docs/active-list/frameworks.njk
@@ -26,14 +26,16 @@ keywords: "ActiveList, ActiveList React, ActiveList Vue, ActiveList Angular"
       <li class="ml-8">
         <a href="#angular" class="text-purple-600 underline">Angular</a>
       </li>
-
       <li class="ml-8">
         <a href="#svelte" class="text-purple-600 underline">Svelte</a>
+      </li>
+      <li class="ml-8">
+        <a href="#alpine" class="text-purple-600 underline">Alpine</a>
       </li>
     </ol>
   </nav>
 
-  <h2 id="react" ><a href="#react">1. In general</a></h2>
+  <h2 id="in-general"><a href="#in-general">1. In general</a></h2>
 
   <p>
     The <a href="/api/core/activelist/" class="underline high">ActiveList</a> 
@@ -54,7 +56,7 @@ keywords: "ActiveList, ActiveList React, ActiveList Vue, ActiveList Angular"
     results in easier to understand code.
   </p>
 
-  <h2 id="react" ><a href="#react">2. React</a></h2>
+  <h2 id="react"><a href="#react">2. React</a></h2>
 
   <p>
     When using React you should use the 
@@ -64,7 +66,7 @@ keywords: "ActiveList, ActiveList React, ActiveList Vue, ActiveList Angular"
     to it.
   </p>
 
-  <h2 id="vue" ><a href="#vue">3. Vue</a></h2>
+  <h2 id="vue"><a href="#vue">3. Vue</a></h2>
 
   <p>
     In Vue you should use the 
@@ -74,7 +76,7 @@ keywords: "ActiveList, ActiveList React, ActiveList Vue, ActiveList Angular"
     to it.
   </p>
 
-  <h2 id="angular" ><a href="#angular">4. Angular</a></h2>
+  <h2 id="angular"><a href="#angular">4. Angular</a></h2>
 
   <p>
     If you are using Angular there is no need to include an extra library.
@@ -82,13 +84,27 @@ keywords: "ActiveList, ActiveList React, ActiveList Vue, ActiveList Angular"
     it will pick up on changes automatically.
   </p>
 
-  <h2 id="svelte" ><a href="#svelte">5. Svelte</a></h2>
+  <h2 id="svelte"><a href="#svelte">5. Svelte</a></h2>
 
   <p>
     For Svelte you should use the 
     <a href="https://www.npmjs.com/package/@uiloos/svelte" target="_blank" rel="noopener noreferrer" class="high underline">@uiloos/svelte</a>
     library. It contains the <a href="/api/svelte/createactiveliststore/" class="high underline">createActiveListStore</a>
     function which creates a readable ActiveList store, so you do not need to subscribe to it manually.
+  </p>
+  
+  <h2 id="alpine"><a href="#alpine">6. Alpine</a></h2>
+
+  <p>
+    With Alpine you should use the <a href="https://www.npmjs.com/package/@uiloos/alpine" target="_blank" rel="noopener noreferrer" class="high underline">@uiloos/alpine</a>
+    package. It contains a function called <a href="/api/alpine/activelist/" class="high underline">activeList</a>
+    which you can register with <span class="high">Alpine.data</span>. This allows you to instantiate an ActiveList from within HTML.
+  </p>
+
+  <p>
+    Alternatively you can instantiate the ActiveList in JavaScript / TypeScript, and pas the instance 
+    to the <a href="/api/alpine/subscribe/" class="high underline">subscribe</a> function. The result of 
+    the subscribe function can be passed to <span class="high">Alpine.data</span>.
   </p>
 
   <a 
