--- a/packages/website/src/pages/releases/angular/angular-releases.njk
+++ b/packages/website/src/pages/releases/angular/angular-releases.njk
@@ -34,6 +34,9 @@ keywords: "uiloos angular releases, angular release hub"
 
   <ol>
     <li>
+      <a href="/releases/angular/1.4.0/" class="font-mono">1.4.0 - 2023-10-13</a>
+    </li>
+    <li>
       <a href="/releases/angular/1.3.0/" class="font-mono">1.3.0 - 2023-09-08</a>
     </li>
     <li>
